--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
 </head>
 <body class="bg-dark container" style="font-family: 微软雅黑;font-size: 1em;color: #424242;letter-spacing: .5px;">
 	<h1 class="text-center text-light" style="margin-top: 28px">1234567pa 永久发布站</h1>
-	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您记下这网址（1234567pa.com）</h3>
+	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
 	<h3 class="text-center text-light" style="margin-top: 28px">您可从以下获取最新的网站地址，或者请联系我们</h3>
-	<div class="text-center" style="margin-top: 32px"><a href="https://www.baidu.com/"><img src="/images/x18.jpg"></a></div>
 
 	<ul class="list-group text-center" style="margin-top: 28px">
-		<li class="list-group-item"><a href="https://www.941pa.com" target="_blank">就是要啪网 https://www.941pa.com</a></li>
-		<li class="list-group-item"><a href="https://www.941pa.club" target="_blank">就是要啪网 https://www.941pa.club</a>（备用）</li>
+		<li class="list-group-item"><a href="https://www.941pa.com" target="_blank">就是要啪网 941pa.com</a></li>
+		<li class="list-group-item"><a href="https://www.941pa.club" target="_blank">就是要啪网 941pa.club</a></li>
+		<li class="list-group-item"><a href="https://www.avwood.club" target="_blank">AV好莱坞 avwood.club</a></li>
+		<li class="list-group-item"><a href="https://www.lookav.club" target="_blank">看AV lookav.club</a></li>
+		<li class="list-group-item"><a href="http://www.nywzd.xyz" target="_blank">女优我最大 nywzd.xyz</a></li>
+		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
+		<li class="list-group-item"><a href="http://www.xn3000.com" target="_blank">胸奴鉴定士 xn3000.com</a></li>
 	</ul>
-	<div class="text-center" style="margin-top: 32px"><img src="/images/contact.jpg" style="max-width: 100%;"></div>
+	
+	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
+	<div class="text-center" style="margin-top: 32px"><img src="https://www.1234567pa.com/images/contact.jpg" style="max-width: 100%;"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
