--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body class="bg-dark container" style="font-family: 微软雅黑;font-size: 1em;color: #424242;letter-spacing: .5px;">
 	<h1 class="text-center text-light" style="margin-top: 28px">1234567pa 永久发布站</h1>
 	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
+	<h5 class="text-center text-light" style="margin-top: 28px">1234567，我的啪友在哪里？</h5>
+	<h5 class="text-center text-light" style="margin-top: 28px">在这里 在这里 我的啪友在在这里~</h5>
 	<h3 class="text-center text-light" style="margin-top: 28px">您可从以下获取最新的网站地址，或者请联系我们</h3>
 
 	<ul class="list-group text-center" style="margin-top: 28px">
