--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<ul class="list-group text-center" style="margin-top: 28px">
 		<li class="list-group-item"><a href="https://www.941pa.com" target="_blank">就是要啪网 941pa.com</a></li>
-		<li class="list-group-item"><a href="https://www.avwood.club" target="_blank">AV好莱坞 avwood.club</a></li>
+		<li class="list-group-item"><a href="http://www.avwood.xyz" target="_blank">AV好莱坞 avwood.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.lookav.club" target="_blank">看AV lookav.club</a></li>
 		<li class="list-group-item"><a href="http://www.nywzd.xyz" target="_blank">女优我最大 nywzd.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
