--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<li class="list-group-item"><a href="http://www.avwood.xyz" target="_blank">AV好莱坞 avwood.xyz</a></li>
 		<li class="list-group-item"><a href="http://www.xn3000.com" target="_blank">胸奴鉴定士 xn3000.com</a></li>
 		<li class="list-group-item"><a href="http://www.nywzd.club" target="_blank">女优我最大 nywzd.club</a></li>
-		<li class="list-group-item"><a href="https://www.lookav.club" target="_blank">看AV lookav.club</a></li>
+		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
 		<li class="list-group-item"><a href="http://www.xbt520" target="_blank">名嘴之吸爆吞 xbt520.com</a></li>
 	</ul>
