--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li class="list-group-item"><a href="http://www.nywzd.club" target="_blank">女优我最大 nywzd.club</a></li>
 		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
-		<li class="list-group-item"><a href="http://www.xbt520" target="_blank">名嘴之吸爆吞 xbt520.com</a></li>
+		<li class="list-group-item"><a href="http://www.xbt520.com" target="_blank">名嘴之吸爆吞 xbt520.com</a></li>
 	</ul>
 	
 	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
