--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<ul class="list-group text-center" style="margin-top: 28px">
 		<li class="list-group-item"><a href="https://www.941pa.com" target="_blank">就是要啪网 941pa.com</a></li>
-		<li class="list-group-item"><a href="http://www.avwood.xyz" target="_blank">AV好莱坞 avwood.xyz</a></li>
+		<li class="list-group-item"><a href="http://www.ahlwood.com" target="_blank">AV好莱坞 ahlwood.com</a></li>
 		<li class="list-group-item"><a href="http://www.xn3001.com" target="_blank">胸奴鉴定士 xn3001.com</a></li>
 		<li class="list-group-item"><a href="http://www.nywzd.club" target="_blank">女优我最大 nywzd.club</a></li>
 		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
