--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<h3 class="text-center text-light" style="margin-top: 28px">您可从以下获取最新的网站地址，或者请联系我们</h3>
 
 	<ul class="list-group text-center" style="margin-top: 28px">
-		<li class="list-group-item"><a href="https://www.941pa.com" target="_blank">就是要啪网 941pa.com</a></li>
+		<li class="list-group-item"><a href="http://www.941pa.cc" target="_blank">就是要啪网 941pa.cc</a></li>
 		<li class="list-group-item"><a href="http://www.ahlwood.com" target="_blank">AV好莱坞 ahlwood.com</a></li>
 		<li class="list-group-item"><a href="http://www.xn3001.com" target="_blank">胸奴鉴定士 xn3001.com</a></li>
 		<li class="list-group-item"><a href="http://www.nywzd.club" target="_blank">女优我最大 nywzd.club</a></li>
