--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
 		<li class="list-group-item"><a href="http://www.xbt520.com" target="_blank">名嘴之吸爆吞 xbt520.com</a></li>
-		<li class="list-group-item"><a href="http://www.wanmei520.club" target="_blank">完美AV世界 wanmei520.club</a></li>
-		<li class="list-group-item"><a href="http://www.jackloon.com" target="_blank">骑李湘湿的味道 jackloon.com</a></li>
+		<!--<li class="list-group-item"><a href="http://www.wanmei520.club" target="_blank">完美AV世界 wanmei520.club</a></li>
+		<li class="list-group-item"><a href="http://www.jackloon.com" target="_blank">骑李湘湿的味道 jackloon.com</a></li>-->
 	</ul>
 	
 	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
