--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<ul class="list-group text-center" style="margin-top: 28px">
 		<li class="list-group-item"><a href="http://www.941pa.cc" target="_blank">就是要啪网 941pa.cc</a></li>
 		<li class="list-group-item"><a href="http://www.ahlwood.com" target="_blank">AV好莱坞 ahlwood.com</a></li>
-		<li class="list-group-item"><a href="http://www.xn3001.com" target="_blank">胸奴鉴定士 xn3001.com</a></li>
-		<li class="list-group-item"><a href="http://www.nywzd.club" target="_blank">女优我最大 nywzd.club</a></li>
+		<li class="list-group-item"><a href="http://www.xn300.com" target="_blank">胸奴鉴定士 xn300.com</a></li>
+		<li class="list-group-item"><a href="http://www.nywzd.com" target="_blank">女优我最大 nywzd.com</a></li>
 		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
 		<li class="list-group-item"><a href="http://www.xbt520.com" target="_blank">名嘴之吸爆吞 xbt520.com</a></li>
