--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body class="bg-dark container" style="font-family: 微软雅黑;font-size: 1em;color: #424242;letter-spacing: .5px;">
 	<h1 class="text-center text-light" style="margin-top: 28px">1234567pa 永久发布站</h1>
 	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
+<section style="width: 100%;margin: 0 auto;text-align: center;">
+	<a href="http://www.941pa01.club/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
+		<img src="http://www.941pa01.club/images/download-banner.png" style="max-width: 100%;width: 400px;">
+	</a>
+</section>
 	<i><h6 class="text-center text-light" style="margin-top: 28px">1234567，我的啪友在哪里？</h6>
 		<h6 class="text-center text-light" style="margin-top: 8px">在这里 在这里 我的啪友在在这里~</h6></i>
 	<h3 class="text-center text-light" style="margin-top: 28px">您可从以下获取最新的网站地址，或者请联系我们</h3>
