--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
 <section style="width: 100%;margin: 0 auto;text-align: center;">
 	<a href="http://www.941pa01.club/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
-		<img src="http://www.941pa01.club/images/download-banner.png" style="max-width: 100%;width: 400px;">
+		<img src="/download-banner.png" style="max-width: 100%;width: 400px;">
 	</a>
 </section>
 	<i><h6 class="text-center text-light" style="margin-top: 28px">1234567，我的啪友在哪里？</h6>
@@ -37,7 +37,7 @@
 	</ul>
 	
 	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
-	<div class="text-center" style="margin-top: 32px"><img src="https://www.1234567pa.com/images/contact.jpg" style="max-width: 100%;"></div>
+	<div class="text-center" style="margin-top: 32px"><img src="/contact.jpg" style="max-width: 100%;"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
