--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 		<li class="list-group-item"><a href="http://www.kanav100.xyz" target="_blank">看AV kanav100.xyz</a></li>
 		<li class="list-group-item"><a href="https://www.thisporn.xyz" target="_blank">ThisPorn thisporn.xyz</a></li>
 		<li class="list-group-item"><a href="http://www.xbt52.com" target="_blank">名嘴之吸爆吞 xbt52.com</a></li>
-		<!--<li class="list-group-item"><a href="http://www.wanmei520.club" target="_blank">完美AV世界 wanmei520.club</a></li>
-		<li class="list-group-item"><a href="http://www.jackloon.com" target="_blank">骑李湘湿的味道 jackloon.com</a></li>-->
+		<li class="list-group-item"><a href="http://www.wanmei520.club" target="_blank">完美AV世界 wanmei520.club</a></li>
+		<li class="list-group-item"><a href="http://www.jackloon.com" target="_blank">骑李湘湿的味道 jackloon.com</a></li>
+		<li class="list-group-item"><a href="http://www.xfluluxiu.com" target="_blank">兴奋的撸撸羞 xfluluxiu.com</a></li>
+		<li class="list-group-item"><a href="http://www.kekoukepa.com" target="_blank">可口可啪 kekoukepa.com</a></li>
+		<li class="list-group-item"><a href="http://www.hchc555.com" target="_blank">火车火车污污污 hchc555.com</a></li>
 	</ul>
 	
 	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
