--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1 class="text-center text-light" style="margin-top: 28px">1234567pa 永久发布站</h1>
 	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
 <section style="width: 100%;margin: 0 auto;text-align: center;">
-	<a href="http://www.941pa01.club/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
+	<a href="http://www.wuwuwu555.xyz/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
 		<img src="/download-banner.png" style="max-width: 100%;width: 400px;">
 	</a>
 </section>
