--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1 class="text-center text-light" style="margin-top: 28px">1234567pa 永久发布站</h1>
 	<h3 class="text-center text-light" style="margin-top: 28px">亲，以免让我失去您，请您收藏此页面</h3>
 <section style="width: 100%;margin: 0 auto;text-align: center;">
-	<a href="http://www.wuwuwu555.xyz/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
+	<a href="http://www.941pa3.xyz/download/apps" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Download', 'event_label': 'daohangapp apk'});">
 		<img src="/download-banner.png" style="max-width: 100%;width: 400px;">
 	</a>
 </section>
@@ -25,7 +25,7 @@
 	<h3 class="text-center text-light" style="margin-top: 28px">您可从以下获取最新的网站地址，或者请联系我们</h3>
 
 	<ul class="list-group text-center" style="margin-top: 28px">
-		<li class="list-group-item"><a href="http://www.941pa.cc" target="_blank">就是要啪网 941pa.cc</a></li>
+		<li class="list-group-item"><a href="http://www.941pa.com" target="_blank">就是要啪网 941pa.com</a></li>
 		<li class="list-group-item"><a href="http://www.ahlwood.com" target="_blank">AV好莱坞 ahlwood.com</a></li>
 		<li class="list-group-item"><a href="http://www.xn300.com" target="_blank">胸奴鉴定士 xn300.com</a></li>
 		<li class="list-group-item"><a href="http://www.nywzd.com" target="_blank">女优我最大 nywzd.com</a></li>
