--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</ul>
 	
 	<h3 class="text-center text-light" style="margin-top: 28px">有任何问题？找站长帮助最实际</h3>
-	<div class="text-center" style="margin-top: 32px"><img src="/contact.jpg" style="max-width: 100%;"></div>
+	<div class="text-center" style="margin-top: 32px"><a href="mailto:oyoungxiuxiu@gmail.com">oyoungxiuxiu@gmail.com</a></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
